<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:background="#ffffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.hyg.seraph0.multinotepad.HandwritingMakingActivity">

    <LinearLayout
        android:id="@+id/latTools"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_width="80dp"
        android:layout_height="match_parent">
        <org.hyg.seraph0.multinotepad.common.TitleBitmapButton
            android:id="@+id/btnColor"
            android:text="@string/color_btn"
            android:drawablePadding="2dip"
            android:drawableTop="@drawable/colorpalette"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <org.hyg.seraph0.multinotepad.common.TitleBitmapButton
            android:id="@+id/btnPen"
            android:text="@string/pen_btn"
            android:drawablePadding="2dip"
            android:drawableTop="@drawable/penpalette"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <org.hyg.seraph0.multinotepad.common.TitleBitmapButton
            android:id="@+id/btnEraser"
            android:text="@string/eraser_btn"
            android:drawablePadding="2dip"
            android:drawableTop="@drawable/eraser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <org.hyg.seraph0.multinotepad.common.TitleBitmapButton
            android:id="@+id/btnUndo"
            android:text="@string/undo_btn"
            android:drawablePadding="2dip"
            android:drawableTop="@drawable/undo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <org.hyg.seraph0.multinotepad.common.TitleBitmapButton
            android:id="@+id/btnSaveHandwriting"
            android:text="@string/handwriting_save_btn"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:id="@+id/latBoard"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_size">
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
